[gd_scene load_steps=8 format=3 uid="uid://b5esf0ymw3e2q"]

[ext_resource type="Script" path="res://Nodes/objetos/door.gd" id="1_oph6j"]
[ext_resource type="Texture2D" uid="uid://duen0w370a18x" path="res://Sprites/Objetos/Door_static.png" id="1_yno1j"]
[ext_resource type="Texture2D" uid="uid://bmj1bw768dgk1" path="res://Sprites/effects/letras_porta.png" id="3_ptm4a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1nbk"]
size = Vector2(10, 10)

[sub_resource type="Animation" id="Animation_i30rb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("p2_input:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("p1_input:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, -11)]
}

[sub_resource type="Animation" id="Animation_7vmf6"]
resource_name = "jumping"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("p2_input:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-4, -9), Vector2(-4, -11), Vector2(-4, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("p1_input:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, -11), Vector2(5, -9), Vector2(5, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ib5lo"]
_data = {
"RESET": SubResource("Animation_i30rb"),
"jumping": SubResource("Animation_7vmf6")
}

[node name="Door" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_oph6j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yno1j")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.90735e-07, -1.90735e-07)
shape = SubResource("RectangleShape2D_w1nbk")

[node name="p1_input" type="Sprite2D" parent="."]
position = Vector2(5, -11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ptm4a")
hframes = 2

[node name="p2_input" type="Sprite2D" parent="."]
position = Vector2(-4, -10)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ptm4a")
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ib5lo")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
